# Oscan

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-examples.ps1  build.rs  builtin_typed_maps_test.c  test.ps1  update-deps.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  (+3 more)
.squad/: .first-run  ceremonies.md  decisions-archive.md  decisions.md  routing.md  team.md
docs/: builtins.md  guide.md  phase6_ffi_report.md  releasing.md  safety.md  test_suite.md  tutorial.md
examples/: base64.osc  blit_demo.osc  bounce.osc  checksum.osc  countlines.osc  env_info.osc  error_handling.bc  error_handling.osc  fibonacci.bc  fibonacci.osc  file_checksum.osc  file_io.osc  grep.osc  handle_ffi.osc  hello.bc  hello.osc  hexdump.osc  http_client.osc  https_get.osc  img_view.osc  led.osc  plasma.osc  scaled_text.osc  sh.osc  sort.osc  string_interpolation.osc  svg_view.osc  ttf_demo.osc  ttf_view.osc  upper.osc  wc.osc  web_server.osc  word_freq.osc
libs/: fonts.osc  ui.osc
runtime/: Makefile  bc_runtime.c  bc_runtime.h  osc_native_shim.c  osc_runtime.c  osc_runtime.h  osc_runtime_freestanding.c  osc_runtime_freestanding_core.c  osc_runtime_graphics.inc  osc_runtime_hosted.c  osc_runtime_hosted_gfx.c  osc_runtime_hosted_tls.c  test_runtime.c
scripts/: assemble-release.ps1  assemble-release.sh  build-msi.ps1  build-runtime-archive.ps1  build-runtime-archive.sh  compare-backend-size.ps1  fetch-toolchain.ps1  fetch-toolchain.sh  gen-builtin-table.py  gen-copilot-instructions.py  gen-oscan-ico.ps1  install-dev.ps1  install-latest.ps1  install-oscan.ps1  install-oscan.sh  prepare-embed-assets.ps1  prepare-embed-assets.sh  release_tools.py  size-matrix.ps1  smoke-release-windows-native.ps1  smoke-release.ps1  smoke-release.sh  stage-release.ps1  stage-release.sh  test_release_tools_runtime_archive.py  test_release_workflow.py  test_smoke_release.py  windows-standard-user.ps1  write-checksums.ps1  write-checksums.sh
src/: ast.rs  c_name.rs  codegen.rs  error.rs  ir.rs  lexer.rs  lower.rs  main.rs  parser.rs  semantic.rs  token.rs  types.rs
tests/: README.md  backend_oracle.ps1  backend_oracle.tests.ps1  ci_exit_codes.rs  cli_help.rs  default_backend_native.tests.ps1  native_extern_str_abi.tests.ps1  native_hosted.tests.ps1  native_link_concurrency.tests.ps1  native_link_concurrency_linux.tests.ps1  native_link_isolation.tests.ps1  native_link_isolation_linux.tests.ps1  panic_message.tests.ps1  run_tests.ps1  run_tests.sh  test_one.sh  windows_native_ci.tests.ps1  wsl_native_batch.tests.ps1
(+363 files in other folders)
